<resources>
    <string name="app_name">Enhanced Hello World</string>

    <string name="welcome_my_app">Welcome to my App!!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name_txt">Please Enter Your Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="title_activity_hello">Hello</string>
    <string name="welcome_to_second_activity">Welcome to my second activity in my App!!</string>
</resources>
