<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome_my_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/greeting" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting"
        android:gravity="center_horizontal"
        android:hint="Please enter your name"
        android:layout_marginBottom="20dp" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_below="@id/enter_name"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/checkbox_male"
            android:text="@string/male"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioBtnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/checkbox_female"
            android:text="@string/female"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioBtnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:gravity="center_horizontal"
        android:layout_above="@id/gender_radio_group"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_below="@id/gender_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
